--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -7,6 +7,5 @@
     --color-logo: #000000;
     --contacts-color: #ffffff99;
     --decorating-color: #AFB1B8;
-    --hero-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-    --bcg-footer: #2F303A;
+    --bg-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 }
