--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,12 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .list {
   list-style: none;
-}
-
-.link {
-  text-decoration: none;
 }
 
 html {
@@ -40,65 +38,35 @@ body {
 }
 
 .container {
-  width: 100%;
+  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
 }
-.container.head {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-@inc {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
-
-.features-list,
-.presentation-list,
-.team-list {
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
-.container.features,
-.container.head,
-.hero,
-.features,
-.container.presentation,
-.clients.container,
 .foot-container,
 .container.portfolio {
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .container.features,
-  .container.head,
-  .hero,
-  .features,
-  .container.presentation,
-  .clients.container,
-  .foot-container,
-  .container.portfolio {
-    width: 480px;
-  }
-}
 
-.foot-container {
-  background-color: var(--bcg-footer);
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .foot-container {
-    padding-top: 60px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 1599px) {
-  .container.presentation {
-    display: none;
-  }
+.site-nav .list,
+.presentation-text {
+  display: flex;
 }
 
 .visually-hiden {
@@ -115,10 +83,6 @@ body {
   margin: -1px;
 }
 
-.is-hidden {
-  display: none;
-}
-
 :root {
   --primary-text-color: #757575;
   --primary-bcg-color: #ffffff;
@@ -128,8 +92,7 @@ body {
   --color-logo: #000000;
   --contacts-color: #ffffff99;
   --decorating-color: #AFB1B8;
-  --hero-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-  --bcg-footer: #2F303A;
+  --bg-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 }
 
 .backdrop {
@@ -348,7 +311,7 @@ body {
   color: var(--accent-color);
 }
 
-header {
+.header {
   position: fixed;
   top: 0;
   left: 0;
@@ -356,13 +319,12 @@ header {
   background-color: var(--primary-bcg-color);
   z-index: 9;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  header {
-    width: 480px;
-    height: 60px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
+.container-header {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo {
@@ -373,8 +335,6 @@ header {
   letter-spacing: 0.03em;
   color: var(--color-logo);
   text-decoration: none;
-  margin-top: 16px;
-  margin-bottom: 16px;
 }
 .logo.link {
   margin-right: 93px;
@@ -382,120 +342,8 @@ header {
 .logo span {
   color: var(--accent-color);
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .logo {
-    margin-left: 15px;
-    margin-right: 0;
-  }
-}
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .mob-menu-open {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border: none;
-    background-color: transparent;
-    display: flex;
-    margin-left: auto;
-  }
-  .mob-menu-close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    border: 0;
-    background-color: transparent;
-  }
-  .mob-menu-open:hover,
-  .mob-menu-open:focus,
-  .mob-menu-open:active,
-  .mob-menu-close:hover,
-  .mob-menu-close:focus,
-  .mob-menu-close:active {
-    fill: var(--accent-color);
-  }
-  .mob-menu {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: auto;
-    top: 0;
-    background-color: var(--primary-bcg-color);
-    width: 100vw;
-    height: 100vh;
-    padding: 48px 10px 48px 40px;
-  }
-  .mob-link {
-    text-decoration: none;
-    color: var(--title-text-color);
-  }
-  .link-modal-mob {
-    color: var(--primary-text-color);
-  }
-  .mob-link:hover,
-  .mob-link:focus,
-  .mob-link:active,
-  .link-modal-mob:hover,
-  .link-modal-mob:focus,
-  .link-modal-mob:active {
-    color: var(--accent-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mob-soc-list:not(:last-child)::after {
-    content: "";
-    position: absolute;
-    width: 1px;
-    height: 22px;
-    margin-left: 10px;
-    align-items: center;
-    color: var(--title-text-color);
-    background: rgba(33, 33, 33, 0.2);
-  }
-  .nav-mob-item,
-  .auth-nav-item {
-    list-style: none;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.8px;
-  }
-  .nav-mob-item:not(:last-child),
-  .auth-nav-item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-  .nav-mob-item {
-    font-size: 40px;
-    line-height: normal;
-    letter-spacing: 0.8px;
-  }
-  .tel-mob {
-    font-size: 34px;
-    line-height: normal;
-    letter-spacing: 0.68px;
-  }
-  .mail-mob {
-    font-size: 24px;
-    line-height: normal;
-    letter-spacing: 0.48px;
-  }
-  .auth-nav-mobile {
-    margin-top: 50px;
-    margin-bottom: 64px;
-  }
-  .mob-soc {
-    display: flex;
-    gap: 20px;
-  }
-  .social-link-mob {
-    width: 100%;
-  }
-}
 .site-nav {
-  display: none;
   height: 48px;
   margin-top: 32px;
 }
@@ -522,8 +370,8 @@ header {
 }
 
 .auth-nav {
-  display: none;
-  margin-left: auto;
+  display: flex;
+  margin-right: 215px;
   align-items: center;
 }
 .auth-nav li + li {
@@ -574,58 +422,52 @@ header {
 }
 
 .hero {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  background-color: #2F303A;
   padding: 200px 0px;
-  background-image: var(--hero-gradient), url(../img/mobile/Hero-img-mobile-x1.jpg);
+  margin-top: 80px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #2F303A;
+  background-image: var(--bg-gradient), url(../../img/mobile/Hero-mobile-x1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left;
-  max-width: 480px;
-  max-height: 400px;
-  width: 100%;
+  background-position: center;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-gradient), url(../img/mobile/Hero-img-mobile-x2.jpg);
-    margin-top: 60px;
+    background-image: var(--bg-gradient), url(../../img/mobile/Hero-mobile-x2.jpg);
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1599px) {
+@media screen and (min-width: 768px) {
   .hero {
-    background-image: var(--hero-gradient), url(../../img/tablet/Hero-img-tablet-x1.jpg);
+    background-size: contain;
+    background-image: var(--bg-gradient), url(../../img/tablet/Hero-tablet-x1.jpg);
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1599px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1599px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1599px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1599px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-gradient), url(../../img/tablet/Hero-img-tablet-x2.jpg);
+    background-image: var(--bg-gradient), url(../../img/tablet/Hero-tablet-x2.jpg);
   }
 }
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .hero {
-    background-image: var(--hero-gradient), url(../../img/desctop/Hero-Img-desctop-x1.jpg);
+    width: 1600px;
+    height: 600px;
+    background-image: var(--bg-gradient), url(../../img/desctop/Hero-desctop-x1.jpg);
   }
 }
-@media screen and (min-width: 1600px) and (min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1600px) and (min-resolution: 192dpi), screen and (min-width: 1600px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-gradient), url(../../img/desctop/Hero-Img-desctop-x2.jpg);
+    background-image: var(--bg-gradient), url(../../img/desctop/Hero-desctop-x2.jpg);
   }
 }
+
 .hero-title {
-  max-width: 360px;
   color: var(--primary-bcg-color);
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 900;
-  font-size: 26px;
-  line-height: 1.6;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-left: auto;
-  margin-right: auto;
+  font-size: 44px;
+  line-height: 1.36;
+  margin-bottom: 30px;
 }
 
 .button {
@@ -641,16 +483,16 @@ header {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0;
-  margin-top: 30px;
 }
 
-@media screen and (min-width: 480px) {
-  .features {
-    width: 450px;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 60px;
-  }
+.features {
+  margin: 94px auto;
+}
+
+.features-list {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
 }
 
 .features-title {
@@ -661,7 +503,6 @@ header {
   text-transform: uppercase;
   color: var(--title-text-color);
   margin: 30px 0px 10px 0px;
-  text-align: center;
 }
 
 .features-text {
@@ -669,28 +510,31 @@ header {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-}
-@media screen and (min-width: 480px) {
-  .features-text {
-    max-width: 450px;
-    margin-left: 15px;
-  }
+  margin: 0;
+  max-width: 270px;
 }
 
 .features-icon {
-  width: 100%;
+  width: 270px;
   height: 120px;
   background-color: var(--secondary-bcg-color);
   justify-content: center;
   align-items: center;
   display: flex;
-  margin-top: 30px;
-  margin-left: 15px;
-  margin-right: 15px;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .features-icon {
-    width: 450px;
+
+.section_presentation {
+  margin-left: auto;
+}
+
+.container.presentation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (max-width: 1199px) {
+  .container.presentation {
+    display: none;
   }
 }
 
@@ -703,6 +547,11 @@ header {
   color: var(--title-text-color);
   margin-bottom: 50px;
   text-align: center;
+}
+
+.presentation-list {
+  gap: 30px;
+  display: flex;
 }
 
 .presentation-thumb {
@@ -735,55 +584,37 @@ header {
 
 .team-section {
   background-color: var(--secondary-bcg-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-.team-section {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.team {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 33px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 30px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  margin-top: 94px;
 }
 
 .container-team {
-  padding: 30px 0px 24px;
+  padding: 30px 0px 0px 0px;
   text-align: center;
 }
 
+.team-list {
+  gap: 30px;
+  display: flex;
+  justify-content: center;
+}
+@media screen and (max-width: 1199px) {
+  .team-list {
+    flex-direction: column;
+  }
+}
+
 .team-item {
-  margin-top: 30px;
-  width: 450px;
+  width: 270px;
   background-color: var(--primary-bcg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-@media screen and (min-width: 480px) and (max-width: 1599px) {
-  .team-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 .team-title {
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
-  text-align: center;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   padding-bottom: 10px;
@@ -798,7 +629,7 @@ header {
 
 .social-links {
   display: flex;
-  margin: 16px 32px 0px 32px;
+  margin: 16px 32px 30px 32px;
   justify-content: center;
   gap: 10px;
 }
@@ -819,7 +650,7 @@ header {
 }
 
 .clients-title {
-  margin-top: 60px;
+  margin-top: 94px;
   margin-bottom: 50px;
   font-family: "Roboto";
   font-style: normal;
@@ -833,22 +664,15 @@ header {
 
 .list-clients {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 30px;
-  margin-bottom: 60px;
-}
-@media screen and (min-width: 480px) and (max-width: 1599px) {
-  .list-clients {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
+  margin-bottom: 94px;
 }
 
 .client-link {
   display: flex;
   border: 1px solid var(--decorating-color);
-  width: 210px;
+  width: 170px;
   height: 92px;
   align-items: center;
   justify-content: center;
@@ -860,22 +684,22 @@ header {
   border: 1px solid var(--accent-color);
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  footer {
-    width: 480px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.footer-section {
+  background-color: #2F303A;
+  padding: 60px 0;
+}
+
+.foot-container {
+  display: flex;
+  justify-content: center;
+}
+
+.contacts-section {
+  margin-top: 60px;
 }
 
 .logo.footer {
   color: var(--primary-bcg-color);
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .logo.footer {
-    margin-left: 163px;
-    margin-right: 163px;
-  }
 }
 
 address {
@@ -890,20 +714,7 @@ address .link {
   text-decoration: none;
   color: var(--primary-bcg-color);
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  address {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 8px;
-  }
-}
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .contact-list-phone {
-    margin-top: 8px;
-  }
-}
 .contacts .link {
   font-weight: 400;
   font-size: 14px;
@@ -913,14 +724,9 @@ address .link {
   color: var(--contacts-color);
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .invite-section {
-    width: 206px;
-    height: 80px;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.invite-section {
+  margin-left: 70px;
+  margin-top: 72px;
 }
 
 .invite-title {
@@ -932,7 +738,6 @@ address .link {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-bcg-color);
-  text-align: center;
 }
 
 .social-links.foot {
@@ -949,17 +754,10 @@ address .link {
 }
 
 .subscribe-section {
+  min-width: 570px;
+  height: 86px;
   margin-top: 72px;
   margin-left: 93px;
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .subscribe-section {
-    width: 450px;
-    margin: 60px 15px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-  }
 }
 
 .subscribe-title {
@@ -974,18 +772,8 @@ address .link {
 }
 
 .subscribe-elements {
-  position: relative;
   display: flex;
   margin-top: 20px;
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .subscribe-elements {
-    max-width: 450px;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: center;
-    text-align: center;
-  }
 }
 
 #subscribe {
@@ -1002,23 +790,12 @@ address .link {
   line-height: 1.25;
   padding: 15px;
   color: var(--primary-bcg-color);
-  position: absolute;
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  #subscribe {
-    width: 450px;
-  }
 }
 
 .subscribe-btn {
+  margin-left: 12px;
   padding: 10px 28px;
   display: flex;
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .subscribe-btn {
-    margin-bottom: 60px;
-    margin-top: 80px;
-  }
 }
 
 .send {
@@ -1032,6 +809,10 @@ address .link {
   flex-wrap: wrap;
   gap: 30px;
   margin-bottom: 94px;
+}
+
+.filter li + li {
+  margin-left: 8px;
 }
 
 .filter .button {
@@ -1058,24 +839,7 @@ address .link {
   display: flex;
   justify-content: center;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .list.filter {
-    flex-wrap: wrap;
-    justify-content: start;
-    margin-top: 120px;
-    padding-right: 100px;
-    gap: 8px;
-    margin-left: 15px;
-  }
-}
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .filter-btn {
-    width: inherit;
-    padding: 6px 22px 6px 22px;
-    margin-right: 8px;
-  }
-}
 .portfolio .link {
   text-decoration: none;
 }
@@ -1084,11 +848,6 @@ address .link {
   width: 370px;
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
-}
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .pcontent {
-    width: 450px;
-  }
 }
 
 .portfolio h2 {
@@ -1113,12 +872,6 @@ address .link {
 }
 .portfolio-list li:hover, .portfolio-list li:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-list {
-  width: 450px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .portfolio-item {
