--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -12,14 +12,12 @@ ul {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .list {
     list-style: none;
-}
-
-.link {
-    text-decoration: none;
 }
 
 html {
