--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,5 +1,5 @@
 .clients-title {
-    margin-top: 60px;
+    margin-top: 94px;
     margin-bottom: 50px;
     font-family: 'Roboto';
     font-style: normal;
@@ -13,20 +13,15 @@
 
 .list-clients {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     gap: 30px;
-    margin-bottom: 60px;
-    @media screen and (min-width: 480px) and (max-width: 1599px) {
-        margin-left: 15px;
-        margin-right: 15px;
-    }
+    margin-bottom: 94px;
 }
 
 .client-link {
     display: flex;
     border: 1px solid var(--decorating-color);
-    width: 210px;
+    width: 170px;
     height: 92px;
     align-items: center;
     justify-content: center;
