--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,17 +1,11 @@
 .features {
-    // margin: 60px 215px;
-    @media  screen and (min-width: 480px) {
-        width: 450px;
-        display: flex;
-        justify-content: center;
-        margin-bottom: 60px;
-    }
+    margin: 94px auto;
 }
 
 .features-list {
-    @media  screen and (min-width: 480px) {
-    
-    }
+    display: flex;
+    gap: 30px;
+    justify-content: center;
 }
 
 .features-title {
@@ -22,7 +16,6 @@
     text-transform: uppercase;
     color: var(--title-text-color);
     margin: 30px 0px 10px 0px;
-    text-align: center;
 }
 
 .features-text {
@@ -30,25 +23,15 @@
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    @media  screen and (min-width: 480px) {
-        max-width: 450px;
-        margin-left: 15px;
-    }
+    margin: 0;
+    max-width: 270px;
 }
 
 .features-icon {
-    // width: calc(100% - 30px);
-    width: 100%;
+    width: 270px;
     height: 120px;
     background-color: var(--secondary-bcg-color);
     justify-content: center;
     align-items: center;
     display: flex;
-    margin-top: 30px;
-    margin-left: 15px;
-    margin-right: 15px;
-    @media  screen and (min-width: 480px) and (max-width: 767px) {
-        width: 450px;
-    
-    }
 }
