--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,17 +1,19 @@
-footer {
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        width: 480px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+.footer-section {
+    background-color: #2F303A;
+    padding: 60px 0;
+}
+
+.foot-container {
+    display: flex;
+    justify-content: center;
+}
+
+.contacts-section {
+    margin-top: 60px;
 }
 
 .logo.footer {
     color: var(--primary-bcg-color);
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        margin-left: 163px;
-        margin-right: 163px;
-    }
 }
 
 address {
@@ -25,18 +27,6 @@ address {
         text-decoration: none;
         color: var(--primary-bcg-color);
     }
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 8px;
-    }
-}
-
-@media screen and (min-width: 480px) and (max-width: 767px) {
-    .contact-list-phone {
-        margin-top: 8px;
-    }
 }
 
 .contacts .link {
@@ -49,16 +39,8 @@ address {
 }
 
 .invite-section {
-    // margin-left: 70px;
-    // margin-top: 72px;
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        width: 206px;
-        height: 80px;
-        margin-top: 60px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
+    margin-left: 70px;
+    margin-top: 72px;
 }
 
 .invite-title {
@@ -70,7 +52,6 @@ address {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-bcg-color);
-    text-align: center;
 }
 
 .social-links.foot {
@@ -87,17 +68,10 @@ address {
 }
 
 .subscribe-section {
-    // min-width: 570px;
-    // height: 86px;
+    min-width: 570px;
+    height: 86px;
     margin-top: 72px;
     margin-left: 93px;
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        width: 450px;
-        margin: 60px 15px;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
 }
 
 .subscribe-title {
@@ -112,16 +86,8 @@ address {
 }
 
 .subscribe-elements {
-    position: relative;
     display: flex;
     margin-top: 20px;
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        max-width: 450px;
-        margin-right: auto;
-        margin-left: auto;
-        justify-content: center;
-        text-align: center;
-    }
 }
 
 #subscribe {
@@ -138,20 +104,12 @@ address {
     line-height: 1.25;
     padding: 15px;
     color: var(--primary-bcg-color);
-    position: absolute;
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        width: 450px;
-    }
 }
 
 .subscribe-btn {
-    // margin-left: 12px;
+    margin-left: 12px;
     padding: 10px 28px;
     display: flex;
-    @media screen and (min-width: 480px) and (max-width: 767px) {
-        margin-bottom: 60px;
-        margin-top: 80px;
-    }
 }
 
 .send {
