--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,64 +1,47 @@
 .hero {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    background-color: #2F303A;
     padding: 200px 0px;
-    background-image: 
-        var(--hero-gradient),
-        url(../img/mobile/Hero-img-mobile-x1.jpg);
+    margin-top: 80px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #2F303A;
+    background-image: var(--bg-gradient), url(../../img/mobile/Hero-mobile-x1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: left;
-    width: 480px;
-    height: 400px;
-    width: 100%;
+    background-position: center;
     @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: 
-                var(--hero-gradient),
-                url(../img/mobile/Hero-img-mobile-x2.jpg);
-                margin-top: 60px;
-        }
+        background-image: var(--bg-gradient), url(../../img/mobile/Hero-mobile-x2.jpg);
+    }
     @include tablet {
-        background-image: 
-            var(--hero-gradient),
-            url(../../img/tablet/Hero-img-tablet-x1.jpg);
+        background-size: contain;
+        background-image: var(--bg-gradient), url(../../img/tablet/Hero-tablet-x1.jpg);
         @media (min-device-pixel-ratio: 2),
-            (min-resolution: 192dpi),
-            (min-resolution: 2dppx) {
-            background-image: 
-                var(--hero-gradient),
-                url(../../img/tablet/Hero-img-tablet-x2.jpg);
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: var(--bg-gradient), url(../../img/tablet/Hero-tablet-x2.jpg);
         }
     }
+
     @include desctop {
-        background-image: 
-        var(--hero-gradient),
-        url(../../img/desctop/Hero-Img-desctop-x1.jpg);
+        width: 1600px;
+        height: 600px;
+        background-image: var(--bg-gradient), url(../../img/desctop/Hero-desctop-x1.jpg);
         @media (min-device-pixel-ratio: 2),
-            (min-resolution: 192dpi),
-            (min-resolution: 2dppx) {
-            background-image: 
-                var(--hero-gradient),
-                url(../../img/desctop/Hero-Img-desctop-x2.jpg);
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: var(--bg-gradient), url(../../img/desctop/Hero-desctop-x2.jpg);
         }
     }
-    &-title {
-        max-width: 360px;
-        color: var(--primary-bcg-color);
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 900;
-        font-size: 26px;
-        line-height: 1.6;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        margin-left: auto;
-        margin-right: auto;
-    }
+}
+
+.hero-title {
+    color: var(--primary-bcg-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    margin-bottom: 30px;
 }
 
 .button {
@@ -74,5 +57,4 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 0;
-    margin-top: 30px;
 }
