--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,55 +1,41 @@
 .team-section {
     background-color: var(--secondary-bcg-color);
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-.team-section {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.team {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 33px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 30px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    margin-top: 94px;
 }
 
 .container-team {
-    padding: 30px 0px 24px;
+    padding: 30px 0px 0px 0px;
     text-align: center;
 }
 
+.team-list {
+    gap: 30px;
+    display: flex;
+    justify-content: center;
+    @media screen and (max-width: 1199px) {
+        flex-direction: column;
+    }
+}
+
 .team-item {
-    margin-top: 30px;
-    width: 450px;
+    width: 270px;
     background-color: var(--primary-bcg-color);
     box-shadow: 
         0px 1px 3px rgba(0, 0, 0, 0.12), 
         0px 1px 1px rgba(0, 0, 0, 0.14), 
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    @media screen and (min-width: 480px) and (max-width: 1599px) {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        margin-left: auto;
-        margin-right: auto;
+    @media screen and (max-width: 1599px) {
+        
     }
 }
 
 .team-title {
-    font-family: 'Roboto';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
-    text-align: center;
+    line-height: 1.18;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
     padding-bottom: 10px;
@@ -64,7 +50,7 @@
 
 .social-links {
     display: flex;
-    margin: 16px 32px 0px 32px;
+    margin: 16px 32px 30px 32px;
     justify-content: center;
     gap: 10px;
 }
