--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,8 @@
 @import './components/container';
 @import './utils/hidden';
 @import './utils/vars';
-@import './utils/mixins';
 @import './components/modal';
+@import './utils/mixin';
 
 @import './layouts/header';
 @import './layouts/hero';
